--- a/DesckCalcSH/Pages/HistoryPage.xaml
+++ b/DesckCalcSH/Pages/HistoryPage.xaml
@@ -2,16 +2,12 @@
 <ContentPage
     x:Class="DesckCalcSH.Pages.HistoryPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Name="History">
 
     <StackLayout Margin="20">
-        <Label Text="Primary colors" />
-        <BoxView Color="Red" />
-        <BoxView Color="Yellow" />
-        <BoxView Color="Blue" />
-        <Label Text="Secondary colors" />
-        <BoxView Color="Green" />
-        <BoxView Color="Orange" />
-        <BoxView Color="Purple" />
+        <Button Clicked="ClearAll" Text="Clear all" />
+        <StackLayout x:Name="history_layout" Margin="20" />
     </StackLayout>
+
 </ContentPage>
