--- a/DesckCalcSH/AppShell.xaml
+++ b/DesckCalcSH/AppShell.xaml
@@ -4,8 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:DesckCalcSH.Pages"
-    xmlns:main="clr-namespace:DesckCalcSH"
-    MaximumHeightRequest="100">
+    xmlns:main="clr-namespace:DesckCalcSH">
 
     <FlyoutItem Title="Calculator" Icon="calc.png">
         <ShellContent
