--- a/DesckCalcSH/MainPage.xaml
+++ b/DesckCalcSH/MainPage.xaml
@@ -2,8 +2,7 @@
 <ContentPage
     x:Class="DesckCalcSH.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    MinimumHeightRequest="300">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
 
     <Grid
