--- a/DesckCalcSH/MainPage.xaml
+++ b/DesckCalcSH/MainPage.xaml
@@ -5,16 +5,19 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <StackLayout>
-        <Editor
-                x:Name="result"
-                Margin="0"
-                Background="White"
-                FontAttributes="Bold"
-                FontSize="Large"
-                HorizontalTextAlignment="End"
-                Text=""
-                TextColor="Orange"
-                VerticalTextAlignment="Center" InputTransparent="False" VerticalOptions="FillAndExpand"/>
+        <Label x:Name="result"
+               Margin="0"
+               Background="White"
+               FontAttributes="Bold"
+               FontSize="Large"
+               HorizontalTextAlignment="End"
+               Text=""
+               TextColor="Orange"
+               VerticalTextAlignment="End" 
+               InputTransparent="False" 
+               LineBreakMode="CharacterWrap"
+               VerticalOptions="FillAndExpand"/>
+
         <Grid
             Padding="5,0"
             BackgroundColor="Gray"
@@ -251,7 +254,8 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="sin"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="0"
                     Grid.Column="1"
@@ -259,7 +263,8 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="asin"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="1"
                     Grid.Column="0"
@@ -267,7 +272,8 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="cos"
-                    TextColor="Black" />
+                    TextColor="Black"
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="1"
                     Grid.Column="1"
@@ -275,14 +281,16 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="acos"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="2"
                     Grid.Column="0"
                     Padding="0"
                     Clicked="OnFunctionClick"
                     Text="tan"
-                    TextColor="Black" />
+                    TextColor="Black"
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="2"
                     Grid.Column="1"
@@ -290,7 +298,8 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="atan"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="3"
                     Grid.Column="0"
@@ -298,7 +307,8 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="log"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="3"
                     Grid.Column="1"
@@ -306,7 +316,8 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="ln"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="3"
                     Grid.Column="0"
@@ -314,7 +325,8 @@
                     Clicked="OnBranchesClick"
                     MinimumWidthRequest="40"
                     Text="("
-                    TextColor="Black" />
+                    TextColor="Black"
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="3"
                     Grid.Column="1"
@@ -322,7 +334,8 @@
                     Clicked="OnBranchesClick"
                     MinimumWidthRequest="40"
                     Text=")"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="4"
                     Grid.Column="0"
@@ -330,7 +343,8 @@
                     Clicked="OnOperatorClick"
                     MinimumWidthRequest="40"
                     Text="^"
-                    TextColor="Black" />
+                    TextColor="Black" 
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="4"
                     Grid.Column="1"
@@ -338,7 +352,8 @@
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="Sqrt"
-                    TextColor="Black" />
+                    TextColor="Black"
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="5"
                     Grid.Column="0"
@@ -346,7 +361,8 @@
                     Clicked="OnOperatorClick"
                     MinimumWidthRequest="40"
                     Text="mod"
-                    TextColor="Black" />
+                    TextColor="Black"
+                    BackgroundColor="Purple"/>
                 <Button
                     Grid.Row="5"
                     Grid.Column="1"
@@ -354,12 +370,10 @@
                     Clicked="OnOperatorClick"
                     MinimumWidthRequest="40"
                     Text="+/-"
-                    TextColor="Black" />
+                    TextColor="Black"
+                    BackgroundColor="Purple"/>
 
             </Grid>
         </Grid>
     </StackLayout>
-
-
-
 </ContentPage>
