--- a/DesckCalcSH/Pages/CharView.xaml
+++ b/DesckCalcSH/Pages/CharView.xaml
@@ -1,22 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView
-    x:Class="MauiSample.Lines.Basic.View"
+    x:Class="DesckCalcSH.Pages.ChartView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:DesckCalcSH.Pages;assembly=DesckCalcSH"
     xmlns:lvc="clr-namespace:LiveChartsCore.SkiaSharpView.Maui;assembly=LiveChartsCore.SkiaSharpView.Maui">
     <ContentView.BindingContext>
-        <local:ViewModel />
+        <local:ChartViewModel />
     </ContentView.BindingContext>
     <ContentView.Content>
-        <StackLayout>
-            <Label Text="test"
-                   HorizontalOptions="CenterAndExpand"
-                   FontSize="Large"
-                   TextColor="Black">
-                
-            </Label>
-            <lvc:CartesianChart Series="{Binding Series}" />
-        </StackLayout>
+        <lvc:CartesianChart Series="{Binding Series}" Title="{Binding Title}" />
     </ContentView.Content>
 </ContentView>
