finish about and add switch sign

--- a/DesckCalcSH/MainPage.xaml
+++ b/DesckCalcSH/MainPage.xaml
@@ -368,7 +368,7 @@
                     Grid.Row="5"
                     Grid.Column="1"
                     Padding="0"
-                    Clicked="OnOperatorClick"
+                    Clicked="SwitchSign"
                     MinimumWidthRequest="40"
                     Text="+/-"
                     TextColor="Black"
