--- a/DesckCalcSH/MainPage.xaml
+++ b/DesckCalcSH/MainPage.xaml
@@ -5,18 +5,42 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
     <StackLayout>
-        <Label x:Name="result"
-               Margin="0"
-               Background="White"
-               FontAttributes="Bold"
-               FontSize="Large"
-               HorizontalTextAlignment="End"
-               Text=""
-               TextColor="Orange"
-               VerticalTextAlignment="End" 
-               InputTransparent="False" 
-               LineBreakMode="CharacterWrap"
-               VerticalOptions="FillAndExpand"/>
+        <ScrollView
+            InputTransparent="False"
+            VerticalOptions="EndAndExpand"
+            VerticalScrollBarVisibility="Always">
+            <ScrollView.Content>
+                <StackLayout
+                    x:Name="temp_layout"
+                    Margin="20"
+                    HorizontalOptions="End" />
+            </ScrollView.Content>
+        </ScrollView>
+
+        <Label
+            x:Name="result"
+            Margin="0"
+            Background="White"
+            FontAttributes="Bold"
+            FontSize="Large"
+            HorizontalTextAlignment="End"
+            InputTransparent="False"
+            LineBreakMode="CharacterWrap"
+            Text="{Binding Result}"
+            TextColor="Purple"
+            VerticalTextAlignment="End" />
+        <Label
+            x:Name="input"
+            Margin="0"
+            Background="White"
+            FontAttributes="Bold"
+            FontSize="Large"
+            HorizontalTextAlignment="End"
+            InputTransparent="False"
+            LineBreakMode="CharacterWrap"
+            Text="{Binding Input}"
+            TextColor="Orange"
+            VerticalTextAlignment="End" />
 
         <Grid
             Padding="5,0"
@@ -252,145 +276,145 @@
                     Grid.Row="0"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="sin"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="0"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="asin"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="cos"
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="acos"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="2"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     Text="tan"
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="2"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="atan"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="3"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="log"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="3"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="ln"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="3"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnBranchesClick"
                     MinimumWidthRequest="40"
                     Text="("
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="3"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnBranchesClick"
                     MinimumWidthRequest="40"
                     Text=")"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="4"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnOperatorClick"
                     MinimumWidthRequest="40"
                     Text="^"
-                    TextColor="Black" 
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="4"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="sqrt"
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="5"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnOperatorClick"
                     MinimumWidthRequest="40"
                     Text="mod"
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="5"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="SwitchSign"
                     MinimumWidthRequest="40"
                     Text="+/-"
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="6"
                     Grid.Column="0"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="ln"
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
                 <Button
                     Grid.Row="6"
                     Grid.Column="1"
                     Padding="0"
+                    BackgroundColor="Purple"
                     Clicked="OnFunctionClick"
                     MinimumWidthRequest="40"
                     Text="log"
-                    TextColor="Black"
-                    BackgroundColor="Purple"/>
+                    TextColor="Black" />
             </Grid>
         </Grid>
     </StackLayout>
