--- a/WebCalcServ/WebCalcServ/Views/Shared/_CalcInput.cshtml
+++ b/WebCalcServ/WebCalcServ/Views/Shared/_CalcInput.cshtml
@@ -17,7 +17,7 @@
         <button class="inj_btn" onclick="AddFunc(this.innerText)">log</button>
         <button class="inj_btn" onclick="AddFunc(this.innerText)">ln</button>
         <button class="inj_btn" onclick="AddOBranch()">(</button>
-        <button class="inj_btn" onclick="lAddCBranch()">)</button>
+        <button class="inj_btn" onclick="AddCBranch()">)</button>
         <button class="inj_btn" onclick="AddOperator(this.innerText)">^</button>
         <button class="inj_btn" onclick="AddFunc(this.innerText)">sqrt</button>
         <button class="inj_btn" onclick="AddOperator(this.innerText)">mod</button>
