add graph page and model

--- a/WebCalcServ/WebCalcServ/Views/Shared/GraphInput.cshtml
+++ b/WebCalcServ/WebCalcServ/Views/Shared/GraphInput.cshtml
@@ -2,8 +2,11 @@
     ViewData["Title"] = "Calculator";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="all_keyboard">
+    <div>X min</div>
+    <input type="number" id="xMin" />
+    <div>X max</div>
+    <input type="number" id="xMax" />
+    <button class="inj_btn" onclick="OnDraw()">Draw Graph</button>
 </div>
 
