--- a/WebCalcServ/WebCalcServ/Views/Shared/_CalcInput.cshtml
+++ b/WebCalcServ/WebCalcServ/Views/Shared/_CalcInput.cshtml
@@ -4,7 +4,7 @@
 @using System.Data
 @using System.Text
 
-@model Model
+@model CalculateData
    
 <div class="all_keyboard">
     <div class="inj_keyboard">
@@ -25,7 +25,7 @@
     </div>
     <div class="main_keyboard">
         <button class="operator_btn" onclick="AddX()">X</button>
-        <input />
+        <input type="number" />
         <button class="operator_btn" onclick="RemoveLast()">C</button>
         <button class="operator_btn" onclick="ClearAll()">AC</button>
         <button class="operator_btn" onclick="AddOperator(this.innerText)">/</button>
@@ -43,6 +43,6 @@
         <button class="operator_btn" onclick="AddOperator(this.innerText)">+</button>
         <button class="main_btn" onclick="AddNum(this.innerText)">0</button>
         <button class="main_btn" onclick="AddDot()">.</button>
-        <button class="main_btn" style="background: orange" onclick="addToDisplay(000000)">=</button>
+        <button class="main_btn" style="background: orange" onclick="OnEqual()">=</button>
     </div>
 </div>
