--- a/WebCalcServ/WebCalcServ/Views/Shared/_CalcOutput.cshtml
+++ b/WebCalcServ/WebCalcServ/Views/Shared/_CalcOutput.cshtml
@@ -2,9 +2,11 @@
     ViewData["Title"] = "Calculator";
 }
 
+@model CalculateData
+
 <div class="all_output">
     <button class="inj_btn" onclick="addToDisplay(3)">Clear history</button>
-    <label class="history">History</label>
-    <label class="output_line" id="ResultLine"></label>
+    <label class="history">@Model.Result </label>
+    <textarea readonly type class="output_line" id="ResultLine" name="RawString"></textarea>
 </div>
 
